# the_collector

./: .gitignore  .travis.yml  LICENSE  pyproject.toml  readme.md  readme.rst  requirements.txt  setup.py
.github/workflows/: python.yaml
archive/: readme.rst
archive/archive/: BagReader.py  BagWriter.py
archive/docs/: sensors.ipynb
archive/examples/: camera.py  new_msg.py
archive/the_collector-original/: circular_buffer.py  json_readme.md
dev/: broke-2.py  broke.py  data.bag  go.py  s.bag  stream.py  test-gz.py  test.bag  works.py
docs/: imu-1.json  sensors.ipynb  simple-calibration.ipynb
docs/notebooks/: the_collector.ipynb
examples/: bob.bag  camera.py  new_msg.py  simple.py
tests/: test-old.py  test.py  test_old.py  test_tc.py
the-collector/: bagit.py
the_collector/: BagReader.py  BagWriter.py  __init__.py  bagit.py  bagitjson.py  circular_buffer.py  data.py  extra_msgpack.py  extra_numpy.py  file_storage.py  messages.py  protocols.py  utils.py
the_collector/archive/: circular_buffer.py  extra_msgpack.py  messages.py
the_collector/ver_1/: bagit.py  extra_numpy.py  protocols.py
the_collector/ver_2/: collector.py
